--- a/index.html
+++ b/index.html
@@ -11,29 +11,43 @@
       <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   </head>
   <body>
-    <!--Nav bar-->
-    <nav id="nav">
-        <div class="d-flex bd-highlight mb-3">
-          <div id="logo" class="mr-auto p-2 bd-highlight">
-            <a href="index.html" target="_self"> 
-                <img src="img\logo.png"  alt="logo">  
-            </a>
-          </div>
-          <div class="p-2 bd-highlight">
-            <a class="nav-link" href="info.html">About</a>
-          </div>
-          <div class="p-2 bd-highlight">
-            <a class="nav-link" href="team.html">devs</a>
-          </div>
-        </div>
+    <!--Navbar-->
+    <nav class="navbar light-blue lighten-4">  
+      <!-- Collapse button -->
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
+        <span >
+          <!-- Navbar brand -->
+          <a class="navbar-brand" href="#" target="_self" >
+              <img src="img\logo.png"  alt="logo">
+          </a>
+        </span>
+      </button>
+      <!-- Collapsible content -->
+      <div class="collapse navbar-collapse navbar-light" id="navbarSupportedContent1">
+        <!-- Links -->
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Info</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Devs</a>
+          </li>
+        </ul>
+      </div>
     </nav>
+
     <!--header-->
     <div>
-      <h2>Welcome to 1949</h2>
+      <h2>
+        <p>
+            1849 
+        </p>
+      </h2>
     </div>
     <div id="line" class="bg-dark"> </div>
      <!--content-->
   </body>
 </html>
-
-<!-- profile-icon: http://icons.iconarchive.com/icons/paomedia/small-n-flat/128/profile-icon.png -->
