--- a/index.html
+++ b/index.html
@@ -40,14 +40,78 @@
     </nav>
 
     <!--header-->
-    <div>
-      <h2>
+    <div id="title">
+      <h1>
         <p>
             1849 
         </p>
-      </h2>
+      </h1>
     </div>
+
     <div id="line" class="bg-dark"> </div>
      <!--content-->
+    <div id="what">
+      <p id="why">
+          1849 is a board game that encourages players to race against each other to a gold mine using jumps, lassos/whips,
+          <br> 
+          and robots to fend off against chasms, snakes, and quicksand. It utilizes platformer mechanics into a competitive 
+          <br> 
+          dice-roll board game medium while presenting a steampunk twist on a classic point in American history.
+      </p>
+      <img src="http://placehold.jp/400x200.png" alt="placeholder">
+   </div>
+    <h4>
+     Dangers lie await...
+    </h4>
+   <div id="how">
+    <div>
+      <p>
+          <span>
+              snakes &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+          </span>
+          <span>
+              Chasms &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+          </span>
+          <span>
+              Quicksand 
+          </span>
+      </p>
+        <img src="http://placehold.jp/300x200.png" alt="placeholder">
+        <img src="http://placehold.jp/300x200.png" alt="placeholder">
+        <img src="http://placehold.jp/300x200.png" alt="placeholder">
+    </div>
+   </div>
+    <h4>
+      Useful tools too!!
+    </h4>
+   <div id="how">
+      <div>
+        <p>
+            <span>
+                Lasso &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            </span>
+            <span>
+                Hospitals &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+            </span>
+            <span>
+                Robots 
+            </span>
+        </p>
+          <img src="http://placehold.jp/300x200.png" alt="placeholder">
+          <img src="http://placehold.jp/300x200.png" alt="placeholder">
+          <img src="http://placehold.jp/300x200.png" alt="placeholder">
+      </div>
+     </div>
+     <h1 id="end">
+       Come and join the fun! 
+     </h1>
+     <p class="text-center">
+      1849 is multi-player with at least two players minimum and up to eight players maximum.	
+     </p>
+     <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
+      <div class="container text-center">
+        <small>Copyright &copy; Mechanical Resonators</small>
+      </div>
+    </footer>
   </body>
 </html>
