--- a/team.html
+++ b/team.html
@@ -11,128 +11,136 @@
             <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         </head>
         <body>
-                <nav class="navbar navbar-expand-md bg-dark navbar-dark">
-                        <a class="navbar-brand" href="index.html">Home</a>
-                        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-                          <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="collapsibleNavbar">
-                          <ul class="navbar-nav">
-                            <li class="nav-item">
-                              <a class="nav-link" href="team.html">Team</a>
-                            </li>
-                            <li class="nav-item">
-                              <a class="nav-link" href="info.html">Info</a>
-                            </li>
-                          </ul>
-                        </div>  
-                      </nav>
-                      <!-- Nahom Aman Ayalew, Parsa Peter Hadidi, Emma Elizabeth Lisowski, Jack Michael Pfeiffer, Thong Le Tran, Adrian Madrigal Tafolla -->
-                      <div class="container">
-                      <h2>Hello from Team</h2>
-                      <div class="teamMembers">
-                          <div class="row">
-                                <div class="col-sm-4">
+        <!--Navbar-->
+        <nav class="navbar light-blue lighten-4">  
+            <!-- Collapse button -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent1" aria-controls="navbarSupportedContent1" aria-expanded="false" aria-label="Toggle navigation">
+            <span >
+                <!-- Navbar brand -->
+                <a class="navbar-brand" href="#" target="_self" >
+                    <img src="img\logo.png"  alt="logo">
+                </a>
+            </span>
+            </button>
+            <!-- Collapsible content -->
+            <div class="collapse navbar-collapse navbar-light" id="navbarSupportedContent1">
+            <!-- Links -->
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                <a class="nav-link" href="#">Info</a>
+                </li>
+                <li class="nav-item active">
+                <a class="nav-link" href="#">Devs</a>
+                </li>
+            </ul>
+            </div>
+        </nav>
+        <!-- Nahom Aman Ayalew, Parsa Peter Hadidi, Emma Elizabeth Lisowski, Jack Michael Pfeiffer, Thong Le Tran, Adrian Madrigal Tafolla -->
+        <div class="container">
+        <h2>Hello from Team</h2>
+        <div class="teamMembers">
+            <div class="row">
+                <div class="col-sm-4">
+
+                <div class="card" style="width: 18rem;">
+                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <div class="card-body">
+                        <h5 class="card-title">Parsa Peter Hadidi</h5>
+                        <p class="card-text">Info: </p>
+                        <p class="card-text">Roles:</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Role 1</li> 
+                            <li class="list-group-item">Role 2</li> 
+                        </ul>
+                    </div>
+                </div>
+                </div>
+
+                <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <div class="card-body">
+                        <h5 class="card-title">Thong Le Tran</h5>
+                        <p class="card-text">Info: </p>
+                        <p class="card-text">Roles:</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Role 1</li> 
+                            <li class="list-group-item">Role 2</li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+
+                <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <div class="card-body">
+                        <h5 class="card-title">Nahom Aman Ayalew</h5>
+                        <p class="card-text">Info:</p>
+                        <p class="card-text">Roles:</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Role 1</li> 
+                            <li class="list-group-item">Role 2</li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            </div>
+        </br>
+
+            <div class="row">
+                <div class="col-sm-4">
 
 
-                                <div class="card" style="width: 18rem;">
-                                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Parsa Peter Hadidi</h5>
-                                        <p class="card-text">Info: </p>
-                                        <p class="card-text">Roles:</p>
-                                        <ul class="list-group list-group-flush">
-                                           <li class="list-group-item">Role 1</li> 
-                                           <li class="list-group-item">Role 2</li> 
-                                        </ul>
-                                    </div>
-                                </div>
-                                </div>
+                <div class="card" style="width: 18rem;">
+                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <div class="card-body">
+                        <h5 class="card-title">Emma Elizabeth Lisowski</h5>
+                        <p class="card-text">Info:</p>
+                        <p class="card-text">Roles:</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Role 1</li> 
+                            <li class="list-group-item">Role 2</li> 
+                        </ul>
+                    </div>
+                </div>
+                </div>
 
-                                <div class="col-sm-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Thong Le Tran</h5>
-                                        <p class="card-text">Info: </p>
-                                        <p class="card-text">Roles:</p>
-                                        <ul class="list-group list-group-flush">
-                                           <li class="list-group-item">Role 1</li> 
-                                           <li class="list-group-item">Role 2</li> 
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
+                <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <div class="card-body">
+                        <h5 class="card-title">Adrian Madrigal Tafolla</h5>
+                        <p class="card-text">Info:</p>
+                        <p class="card-text">Roles:</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Role 1</li> 
+                            <li class="list-group-item">Role 2</li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
 
-                                <div class="col-sm-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Nahom Aman Ayalew</h5>
-                                        <p class="card-text">Info:</p>
-                                        <p class="card-text">Roles:</p>
-                                        <ul class="list-group list-group-flush">
-                                           <li class="list-group-item">Role 1</li> 
-                                           <li class="list-group-item">Role 2</li> 
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                          </div>
-                        </br>
+                <div class="col-sm-4">
+                <div class="card" style="width: 18rem;">
+                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <div class="card-body">
+                        <h5 class="card-title">Jack Michael Pfeiffer</h5>
+                        <p class="card-text">Info:</p>
+                        <p class="card-text">Roles:</p>
+                        <ul class="list-group list-group-flush">
+                            <li class="list-group-item">Role 1</li> 
+                            <li class="list-group-item">Role 2</li> 
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            </div>
 
-                          <div class="row">
-                                <div class="col-sm-4">
-
-
-                                <div class="card" style="width: 18rem;">
-                                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Emma Elizabeth Lisowski</h5>
-                                        <p class="card-text">Info:</p>
-                                        <p class="card-text">Roles:</p>
-                                        <ul class="list-group list-group-flush">
-                                           <li class="list-group-item">Role 1</li> 
-                                           <li class="list-group-item">Role 2</li> 
-                                        </ul>
-                                    </div>
-                                </div>
-                                </div>
-
-                                <div class="col-sm-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Adrian Madrigal Tafolla</h5>
-                                        <p class="card-text">Info:</p>
-                                        <p class="card-text">Roles:</p>
-                                        <ul class="list-group list-group-flush">
-                                           <li class="list-group-item">Role 1</li> 
-                                           <li class="list-group-item">Role 2</li> 
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-
-                                <div class="col-sm-4">
-                                <div class="card" style="width: 18rem;">
-                                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Jack Michael Pfeiffer</h5>
-                                        <p class="card-text">Info:</p>
-                                        <p class="card-text">Roles:</p>
-                                        <ul class="list-group list-group-flush">
-                                           <li class="list-group-item">Role 1</li> 
-                                           <li class="list-group-item">Role 2</li> 
-                                        </ul>
-                                    </div>
-                                </div>
-                            </div>
-                          </div>
-
-                      </div>
-                      </div>
-        </body>
-
-    
+        </div>
+        </div>
+    </body>
 </html>
