--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
      <!--content-->
     <div id="what">
       <p id="why">
-          1849 is a board game that encourages players to race against each other to a gold mine using jumps, lassos/whips,
+          1849 is a board game that encourages players to race against each other to a gold mine using jumps, their own unique weapons,
           <br> 
           and robots to fend off against chasms, snakes, and quicksand. It utilizes platformer mechanics into a competitive 
           <br> 
           dice-roll board game medium while presenting a steampunk twist on a classic point in American history.
       </p>
-      <img src="http://placehold.jp/400x200.png" alt="placeholder">
+      <img src="img/1849.png" alt="poster">
    </div>
     <h4>
      Dangers lie await...
@@ -75,10 +75,14 @@
           <span>
               Quicksand 
           </span>
+          <span>
+              Dynamite 
+          </span>
       </p>
-        <img src="http://placehold.jp/300x200.png" alt="placeholder">
-        <img src="http://placehold.jp/300x200.png" alt="placeholder">
-        <img src="http://placehold.jp/300x200.png" alt="placeholder">
+        <img src="img/snake.gif" alt="snake">
+        <img src="img/chasm.png" alt="chasm">
+        <img src="img/quicksand.png" alt="quicksand">
+        <img src="img/dynamite.png" alt="dynamite">
     </div>
    </div>
     <h4>
@@ -88,18 +92,14 @@
       <div>
         <p>
             <span>
-                Lasso &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
-            </span>
-            <span>
                 Hospitals &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             </span>
             <span>
                 Robots 
             </span>
         </p>
-          <img src="http://placehold.jp/300x200.png" alt="placeholder">
-          <img src="http://placehold.jp/300x200.png" alt="placeholder">
-          <img src="http://placehold.jp/300x200.png" alt="placeholder">
+          <img src="img/hospital.jpg" alt="hospital">
+          <img src="img/robots.gif" alt="robots">
       </div>
      </div>
      <h1 id="end">
