Displaying character images

--- a/index.html
+++ b/index.html
@@ -61,6 +61,31 @@
       <img src="img/1849.png" alt="poster">
    </div>
     <h4>
+      Characters to choose from
+    </h4>
+   <div id="how">
+    <div>
+      <p>
+          <span>
+              Sam &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+          </span>
+          <span>
+              Bob &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+          </span>
+          <span>
+              Gary 
+          </span>
+          <span>
+              Mike 
+          </span>
+      </p>
+        <img src="img/Sam.png" alt="Sam">
+        <img src="img/Bob.png" alt="Bob">
+        <img src="img/Gary.png" alt="Gary">
+        <img src="img/Mike.png" alt="Mike">
+    </div>
+   </div>
+    <h4>
      Dangers lie await...
     </h4>
    <div id="how">
