--- a/index.html
+++ b/index.html
@@ -52,10 +52,8 @@
      <!--content-->
     <div id="what">
       <p id="why">
-          1849 is a board game that encourages players to race against each other to a gold mine using jumps, lassos/whips,
-          <br> 
+          1849 is a board game that encourages players to race against each other to a gold mine using jumps, lassos/whips, 
           and robots to fend off against chasms, snakes, and quicksand. It utilizes platformer mechanics into a competitive 
-          <br> 
           dice-roll board game medium while presenting a steampunk twist on a classic point in American history.
       </p>
       <img src="http://placehold.jp/400x200.png" alt="placeholder">
@@ -109,8 +107,8 @@
       1849 is multi-player with at least two players minimum and up to eight players maximum.	
      </p>
      <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-      <div class="container text-center">
-        <small>Copyright &copy; Mechanical Resonators</small>
+      <div class="container text-left">
+        <small> Copyright &copy; Mechanical Resonators</small>
       </div>
     </footer>
   </body>
