Add roles for every team member

--- a/team.html
+++ b/team.html
@@ -27,33 +27,32 @@
             <!-- Links -->
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                 <a class="nav-link" href="#">Info</a>
                 </li>
                 <li class="nav-item active">
-                <a class="nav-link" href="#">Devs</a>
+                <a class="nav-link" href="team.html">Devs</a>
                 </li>
             </ul>
             </div>
         </nav>
         <!-- Nahom Aman Ayalew, Parsa Peter Hadidi, Emma Elizabeth Lisowski, Jack Michael Pfeiffer, Thong Le Tran, Adrian Madrigal Tafolla -->
         <div class="container">
-        <h2>Hello from Team</h2>
+        <h2>1849 Most Wanted List</h2>
         <div class="teamMembers">
             <div class="row">
                 <div class="col-sm-4">
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <img src="img/buzz.jpg" class="card-img-top" alt="profile-icon">
                     <div class="card-body">
                         <h5 class="card-title">Parsa Peter Hadidi</h5>
-                        <p class="card-text">Info: </p>
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Role 1</li> 
-                            <li class="list-group-item">Role 2</li> 
+                            <li class="list-group-item">Game Overview Author</li> 
+                            <li class="list-group-item">World Layout Creator</li> 
                         </ul>
                     </div>
                 </div>
@@ -61,14 +60,13 @@
 
                 <div class="col-sm-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <img src="img/darth-vader.jpg" class="card-img-top" alt="profile-icon">
                     <div class="card-body">
                         <h5 class="card-title">Thong Le Tran</h5>
-                        <p class="card-text">Info: </p>
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Role 1</li> 
-                            <li class="list-group-item">Role 2</li> 
+                            <li class="list-group-item">Game Characters & Weapons Developer</li> 
+                            <li class="list-group-item">Marketeer</li> 
                         </ul>
                     </div>
                 </div>
@@ -76,14 +74,13 @@
 
                 <div class="col-sm-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <img src="img/woody.jpg" class="card-img-top" alt="profile-icon">
                     <div class="card-body">
                         <h5 class="card-title">Nahom Aman Ayalew</h5>
-                        <p class="card-text">Info:</p>
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Role 1</li> 
-                            <li class="list-group-item">Role 2</li> 
+                            <li class="list-group-item">Miscellanea Handler</li> 
+                            <li class="list-group-item">Marketing UI Designer</li> 
                         </ul>
                     </div>
                 </div>
@@ -96,14 +93,13 @@
 
 
                 <div class="card" style="width: 18rem;">
-                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <img src="img/jessie.jpg" class="card-img-top" alt="profile-icon">
                     <div class="card-body">
                         <h5 class="card-title">Emma Elizabeth Lisowski</h5>
-                        <p class="card-text">Info:</p>
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Role 1</li> 
-                            <li class="list-group-item">Role 2</li> 
+                            <li class="list-group-item">Game World Director</li> 
+                            <li class="list-group-item">Appendix Writer</li> 
                         </ul>
                     </div>
                 </div>
@@ -111,14 +107,13 @@
 
                 <div class="col-sm-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <img src="img/rex.jpg" class="card-img-top" alt="profile-icon">
                     <div class="card-body">
                         <h5 class="card-title">Adrian Madrigal Tafolla</h5>
-                        <p class="card-text">Info:</p>
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Role 1</li> 
-                            <li class="list-group-item">Role 2</li> 
+                            <li class="list-group-item">Common Questions Service </li> 
+                            <li class="list-group-item">Feature Set Provider</li> 
                         </ul>
                     </div>
                 </div>
@@ -126,14 +121,13 @@
 
                 <div class="col-sm-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="img/profile-icon.png" class="card-img-top" alt="profile-icon">
+                    <img src="img/mrpotatohead.jpg" class="card-img-top" alt="profile-icon">
                     <div class="card-body">
                         <h5 class="card-title">Jack Michael Pfeiffer</h5>
-                        <p class="card-text">Info:</p>
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
-                            <li class="list-group-item">Role 1</li> 
-                            <li class="list-group-item">Role 2</li> 
+                            <li class="list-group-item">Game User Interface Designer</li> 
+                            <li class="list-group-item">Multiplayer Game Idealist</li> 
                         </ul>
                     </div>
                 </div>
