--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <!-- Links -->
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index.html">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Info</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Devs</a>
+            <a class="nav-link" href="team.html">Devs</a>
           </li>
         </ul>
       </div>
@@ -52,8 +52,10 @@
      <!--content-->
     <div id="what">
       <p id="why">
-          1849 is a board game that encourages players to race against each other to a gold mine using jumps, lassos/whips, 
+          1849 is a board game that encourages players to race against each other to a gold mine using jumps, their own unique weapons,
+          <br> 
           and robots to fend off against chasms, snakes, and quicksand. It utilizes platformer mechanics into a competitive 
+          <br> 
           dice-roll board game medium while presenting a steampunk twist on a classic point in American history.
       </p>
       <img src="img/1849.png" alt="poster">
@@ -132,8 +134,8 @@
       1849 is multi-player with at least two players minimum and up to eight players maximum.	
      </p>
      <footer id="sticky-footer" class="py-4 bg-dark text-white-50">
-      <div class="container text-left">
-        <small> Copyright &copy; Mechanical Resonators</small>
+      <div class="container text-center">
+        <small>Copyright &copy; Mechanical Resonators</small>
       </div>
     </footer>
   </body>
