--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <link rel="stylesheet" href="styles/styles.css">
       <link href="https://fonts.googleapis.com/css?family=Special+Elite&display=swap" rel="stylesheet">
-      <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
@@ -37,7 +36,7 @@
         </ul>
       </div>
     </nav>
-
+ 
     <!--header-->
     <div id="title">
       <h1>
@@ -61,7 +60,7 @@
    </div>
 
     <h4>
-      Four characters to choose from
+      Four characters to choose from:
     </h4>
 
    <div id="list">
@@ -98,10 +97,10 @@
         <img src="img/dynamite.png" alt="dynamite">
       <p>
           <span>
-              Snakes
+              Snakes &emsp;
           </span>
           <span>
-              Chasms 
+              Chasms &emsp;&emsp;
           </span>
           <span>
               Quicksand 
@@ -120,16 +119,15 @@
       <div>
           <img src="img/hospital.jpg" alt="hospital">
           <img src="img/robots.gif" alt="robots">
+      </div>
         <p>
             <span>
-                Hospitals &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
+                Hospitals 
             </span>
             <span>
                 Robots 
             </span>
         </p>
-          
-      </div>
      </div>
      <h1 id="end">
        Come and join the fun! 
