--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <p>
          
             <span>
-                Hospitals 
+                Hospitals &emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;
             </span>
             <span>
                 Robots 
