--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     <h4>
       Useful tools too!!
     </h4>
-   <div id="how">
+   <div id="danger">
       <div>
        
           <img src="img/hospital.jpg" alt="hospital">
