Fix Emma's Roles

--- a/team.html
+++ b/team.html
@@ -98,7 +98,7 @@
                         <p class="card-text">Roles:</p>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item">Game World Director</li> 
-                            <li class="list-group-item">Appendix Writer</li> 
+                            <li class="list-group-item">Board Creator</li> 
                         </ul>
                     </div>
                 </div>
